Needs more memory to run IDE.